# QtQuickDateCalc

./: CMakeLists.txt  HomeForm.qml  Page1Form.ui.qml  QtQuickDateCalc.desktop  QtQuickDateCalc.ts  QtQuickDateCalc_French.ts  QtQuickDateCalc_German.ts  QtQuickDateCalc_Italian.ts  QtQuickDateCalc_Portuguese.ts  QtQuickDateCalc_Spanish.ts  README.md  install_manifest.txt  main.cpp  main.qml  qml.qrc
